# OpenGL_ES_3.x

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/huoergai/gles/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: sensor_graph.fsh  sensor_graph.vs  simple_triangle.fs  simple_triangle.glslv  texture_map.fsh  texture_map.vsh
app/src/main/cpp/: CMakeLists.txt  gles_util.cpp  gles_util.h  native-lib.cpp  native_sensor.cpp  native_texture.cpp  native_triangle.cpp  sensor_graph.cpp  sensor_graph.h  simple_triangle.cpp  simple_triangle.h  texture_map.cpp  texture_map.h  util.cpp  util.h
app/src/main/java/com/huoergai/gles/: BaseActivity.kt  BaseGLSurfaceView.kt  Constant.kt  GLESApp.kt  MainActivity.kt  NativeSensor.kt  NativeTriangle.kt  PagerViewAdapter.kt  ResUtil.kt  SensorGLSurfaceView.kt  SensorGraph.kt  SensorGraphView.kt  TextureMapGLSurfaceView.kt  TextureMapView.kt  TriangleGLSurfaceView.kt  TriangleView.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/huoergai/gles/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
